# mandelbrot

./: README.md
CUDA/: CMakeLists.txt  helper_math.h  mandelbrot.cu
ComputeShader/: CMakeLists.txt  mandelbrot.cpp
ComputeShader/lib/GNU-Linux/GLFW/: libglfw.so.3.2
OpenCL/: CMakeLists.txt  mandelbrot.cpp
